add XML schema URL to command line options